k8s/gatewayAPI/gatewayAPI.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web-gateway
  namespace: default
spec:
  gatewayClassName: acme-lb #(Envoy, Istio)
  listeners:
  - name: http             
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
